# codex_beginning_project

./: .gitignore  README.md  pyproject.toml
.test_artifacts/: minimal_2b18420ab09f49738f356018aa4e94c4.3mf  minimal_d4711e5a7e2d492a9bf5dfcb0d4eefc6.3mf
audits/: AUDIT_SUMMARY.txt  contribution-analysis.md  cwe-mapping.md  llm-compliance-report.md  sast-dast-scan.md  supply-chain-audit.md
src/bambu2ifc/: __init__.py  cli.py  converter.py  errors.py  ifc_writer.py  metadata.py  models.py  parser_3mf.py
src/bambu2ifc/__pycache__/: __init__.cpython-312.pyc.1517507201200  __init__.cpython-312.pyc.2243537762736  cli.cpython-312.pyc.2551696235952  converter.cpython-312.pyc.2157107869872  converter.cpython-312.pyc.2243537756592  errors.cpython-312.pyc.2243538399152  ifc_writer.cpython-312.pyc.2157111134384  metadata.cpython-312.pyc.2552557428528  models.cpython-312.pyc.2551738870832  parser_3mf.cpython-312.pyc.1920628352304  parser_3mf.cpython-312.pyc.2551739376944
tests/: test_converter_e2e.py  test_ifc_writer.py  test_parser_3mf.py
tests/__pycache__/: conftest.cpython-312-pytest-9.0.2.pyc.10016  test_converter_e2e.cpython-312-pytest-9.0.2.pyc.54604  test_ifc_writer.cpython-312-pytest-9.0.2.pyc.48740  test_parser_3mf.cpython-312-pytest-9.0.2.pyc.49360  test_parser_3mf.cpython-312-pytest-9.0.2.pyc.50752
